--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,21 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
+.grid li{
+  margin: 10px 0;
+  width: 250px;
+  padding: 20px;
+}
+
+.grid li img{
+  max-width: 70%;
+  display: block;
+  margin: auto;
+}
